Switched logging from log4j to logback.